@@ -1,5 +1,10 @@
 2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
 
+	* support/makebin/makebin.c:
+	  Fix buffer overflow, patch #400 by bbbbbr.
+
+2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
+
 	* src/f8/gen.c:
 	  Support tstw.
 	* support/regression/ports/f8,
